--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shop",
   "version": "0.1.0",
-  "homepage": "https://angryweather.github.io/shop-frontend/",
+  "homepage": "https://angryweather.github.io/shop-frontend",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
